--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,8 +5,8 @@
 @import '../scss/_E-topTwo.scss';
 @import '../scss/_F-topThree.scss';
 @import '../scss/_G-midOne.scss';
-@import '../scss/_H-midTWO.scss';
-@import '../scss/_I-midTHREE.scss';
+@import '../scss/_H-midTwo.scss';
+@import '../scss/_I-midThree.scss';
 @import '../scss/_J-midFOUR.scss';
 @import '../scss/_K-bottomONE.scss';
 @import '../scss/_L-bottomTWO.scss';
