--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,8 +7,8 @@
 @import '../scss/_G-midOne.scss';
 @import '../scss/_H-midTwo.scss';
 @import '../scss/_I-midThree.scss';
-@import '../scss/_J-midFOUR.scss';
-@import '../scss/_K-bottomONE.scss';
+@import '../scss/_J-midFour.scss';
+@import '../scss/_K-bottomOne.scss';
 @import '../scss/_L-bottomTWO.scss';
 @import '../scss/_M-bottomTHREE.scss';
 
