--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,7 @@
 @import '../scss/_I-midThree.scss';
 @import '../scss/_J-midFour.scss';
 @import '../scss/_K-bottomOne.scss';
-@import '../scss/_L-bottomTWO.scss';
+@import '../scss/_L-bottomTwo.scss';
 @import '../scss/_M-bottomTHREE.scss';
 
 * {
