--- a/scss/_L-bottomTWO.scss
+++ b/scss/_L-bottomTWO.scss
@@ -1,113 +1,108 @@
-#bottomTWO {
+#L-bottomTwo {
   display: flex;
   flex-direction: column;
-  width: inherit;
-  height: fit-content;
+  width: 100%;
   position: relative;
-  background-color: rgb(255, 255, 255);
-  overflow: hidden;
+  background-color: #ffffff;
 
-  #bg {
-    background-image: url('../images/croissant.png');
-    width: 100%;
-    height: 50em;
+  #bottomTwoBg {
+    background-image: url('../images/L-bottomTwo/bottomTwoBg.png');
+    width: inherit;
+    height: 800px;
     position: absolute;
-    margin: 2em;
     background-size: contain;
 
     @include breakPoints(small) {
       width: inherit;
-      height: 280em;
+      height: 4480px;
       background-repeat: unset;
     }
 
     @include breakPoints(mobile) {
       width: inherit;
-      height: 245em;
+      height: 3920px;
       background-repeat: unset;
     }
   }
 
-  #title {
+  #bottomTwoTitle {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    row-gap: 30px;
     width: inherit;
-    margin-top: 5em;
     align-items: center;
 
     #one {
       font-size: 21px;
       font-weight: 700;
-      color: rgb(77, 139, 85);
+      color: #4d8b55;
     }
 
     #two {
       font-size: 45px;
       font-weight: 700;
-      color: rgb(0, 0, 0);
+      color: #000000;
       text-align: center;
+
+      @media (min-width: 300px) and (max-width: 448px) {
+        width: 90%;
+      }
     }
 
     #three {
-      width: min(100% - 4em, 50em);
-      margin: 2em 2em 0 2em;
-      color: rgb(0, 0, 0);
+      width: min(100% - 64px, 800px);
+      color: #000000;
       text-align: center;
+
+      @media (min-width: 300px) and (max-width: 419px) {
+        font-size: 15px;
+      }
     }
   }
 
-  #midSEC {
+  #bottomTwoMidSec {
     display: flex;
     flex-direction: row;
     width: inherit;
     align-items: center;
-    margin-top: -4em;
+    column-gap: 20px;
+    margin-top: -64px;
 
-    @include breakPoints(small) {
+    @media (min-width: 300px) and (max-width: 1023px) {
       flex-direction: column;
-    }
-
-    @include breakPoints(mobile) {
-      flex-direction: column;
-    }
-
-    @include breakPoints(tablet) {
-      flex-direction: column;
+      margin-top: 18px;
     }
 
     @include breakPoints(laptop) {
-      margin-top: 4em;
+      margin-top: -18px;
     }
 
     #left {
       background-image: url('../images/ethioFIRST.jpg');
-      width: 48em;
-      height: 48em;
+      width: 768px;
+      height: 768px;
       background-repeat: no-repeat;
       background-size: contain;
       transform: scale(75%);
 
-      @media (min-width: 300px) and (max-width: 400px) {
-        margin-top: -8em;
+      @media (min-width: 300px) and (max-width: 399px) {
+        margin-top: -160px;
         transform: scale(38%);
       }
 
-      @media (min-width: 400px) and (max-width: 555px) {
-        margin-top: -6em;
+      @media (min-width: 399px) and (max-width: 549px) {
+        margin-top: -95px;
         transform: scale(50%);
       }
 
-      @media (min-width: 555px) and (max-width: 1023px) {
+      @media (min-width: 549px) and (max-width: 1023px) {
+        margin-top: -64px;
         transform: scale(62%);
       }
 
-      @media (min-width: 555px) and (max-width: 1023px) {
-        margin-top: -4em;
-      }
-
       @include breakPoints(laptop) {
-        transform: scale(90%);
+        transform: scale(80%);
       }
     }
 
@@ -116,71 +111,47 @@
       flex-direction: column;
       flex-wrap: wrap;
       width: 70%;
-      margin-left: 5em;
+      column-gap: 40px;
 
-      @media (min-width: 310px) and (max-width: 1023px) {
+      @media (min-width: 300px) and (max-width: 1023px) {
         width: fit-content;
       }
 
-      @media (min-width: 310px) and (max-width: 555px) {
-        margin-top: -5em;
+      @media (min-width: 300px) and (max-width: 449px) {
+        margin-top: -80px;
       }
 
-      @media (min-width: 310px) and (max-width: 400px) {
-        margin-left: 4em;
+      @media (min-width: 449px) and (max-width: 599px) {
+        margin-top: -55px;
       }
 
-      @media (min-width: 885px) and (max-width: 1023px) {
-        margin-left: 8em;
+      @media (min-width: 599px) and (max-width: 767px) {
+        margin-top: -30px;
       }
 
-      @include breakPoints(laptop) {
-        margin-top: -17em;
-      }
+      #allInOne {
+        display: flex;
+        flex-direction: column;
+        row-gap: 35px;
 
-      #allONE {
+        @media (min-width: 300px) and (max-width: 1023px) {
+          align-items: center;
+        }
+
         #stars {
           display: flex;
           flex-direction: row;
+          column-gap: 10px;
           width: fit-content;
 
-          #one {
-            background-image: url('../images/star.svg');
-            width: 20px;
-            height: 20px;
-            margin-right: 0.3em;
-            background-repeat: no-repeat;
-          }
-
-          #two {
-            background-image: url('../images/star.svg');
-            width: 20px;
-            height: 20px;
-            margin-right: 0.3em;
-            background-repeat: no-repeat;
-          }
-
-          #three {
-            background-image: url('../images/star.svg');
-            width: 20px;
-            height: 20px;
-            margin-right: 0.3em;
-            background-repeat: no-repeat;
-          }
-
-          #four {
-            background-image: url('../images/star.svg');
-            width: 20px;
-            height: 20px;
-            margin-right: 0.3em;
-            background-repeat: no-repeat;
-          }
-
+          #one,
+          #two,
+          #three,
+          #four,
           #five {
             background-image: url('../images/star.svg');
             width: 20px;
             height: 20px;
-            margin-right: 0.3em;
             background-repeat: no-repeat;
           }
         }
@@ -189,19 +160,13 @@
           display: flex;
           flex-direction: column;
           flex-wrap: wrap;
+          row-gap: 20px;
           width: 80%;
-          margin-right: 3em;
           text-align: justify;
 
           #one {
             font-size: 27px;
             font-weight: 700;
-            margin-top: 0.5em;
-          }
-
-          #two {
-            margin-top: 0.5em;
-            transition: all 1s ease;
           }
         }
 
@@ -209,190 +174,114 @@
           display: flex;
           flex-direction: row;
           flex-wrap: wrap;
+          column-gap: 80px;
+          row-gap: 50px;
+
+          @media (min-width: 300px) and (max-width: 1023px) {
+            flex-direction: column;
+            row-gap: 45px;
+            align-items: center;
+          }
 
           #grading {
             display: flex;
             flex-direction: column;
+            row-gap: 10px;
             width: fit-content;
-            margin-top: 2em;
             align-items: start;
 
-            #first {
-              display: flex;
-              flex-direction: row;
-              justify-content: space-evenly;
-              align-items: center;
-
-              #check {
-                background-image: url('../images/check.svg');
-                width: 15px;
-                height: 15px;
-              }
-
-              #one {
-                margin-left: 1em;
-              }
+            @media (min-width: 300px) and (max-width: 1023px) {
+              padding-inline: 40px;
             }
 
-            #sec {
-              display: flex;
-              flex-direction: row;
-              justify-content: space-evenly;
-              margin-top: 0.5em;
-              align-items: center;
-
-              #check {
-                background-image: url('../images/check.svg');
-                width: 15px;
-                height: 15px;
-              }
-
-              #one {
-                margin-left: 1em;
-              }
-            }
-
-            #third {
-              display: flex;
-              flex-direction: row;
-              justify-content: space-evenly;
-              margin-top: 0.5em;
-              align-items: center;
-
-              #check {
-                background-image: url('../images/check.svg');
-                width: 15px;
-                height: 15px;
-              }
-
-              #one {
-                margin-left: 1em;
-              }
-            }
-
+            #first,
+            #sec,
+            #third,
             #fourth {
               display: flex;
               flex-direction: row;
               justify-content: space-evenly;
-              margin-top: 0.5em;
               align-items: center;
+              column-gap: 15px;
 
               #check {
                 background-image: url('../images/check.svg');
                 width: 15px;
                 height: 15px;
               }
-
-              #one {
-                margin-left: 1em;
-              }
             }
           }
 
-          #priceONE {
+          #overviewPrice {
             display: flex;
             flex-direction: row;
             align-items: end;
 
-            @media (min-width: 310px) and (max-width: 529px) {
-              margin-top: 2em;
-            }
-
-            @media (min-width: 444px) and (max-width: 550px) {
-              margin-right: 4em;
+            @media (min-width: 300px) and (max-width: 1023px) {
+              align-items: unset;
             }
 
             #one {
               font-size: 22px;
               font-weight: 700;
-              color: rgb(128, 128, 128);
+              color: #808080;
               text-decoration-line: line-through;
             }
 
             #two {
               font-size: 22px;
               font-weight: 700;
-              color: rgb(255, 0, 0);
-            }
-          }
-        }
-
-        #buttons {
-          display: flex;
-          flex-direction: row;
-          margin: 3em 0 0 0;
-
-          @include breakPoints(small) {
-            flex-direction: column;
-            align-items: start;
-            margin-left: 0;
-          }
-
-          @include breakPoints(mobile) {
-            flex-direction: column;
-            justify-content: space-evenly;
-            margin-left: 0;
-            align-items: start;
-          }
-
-          @include breakPoints(tablet) {
-            justify-content: space-evenly;
-            margin: 4em 0 0 0;
-          }
-
-          #add {
-            width: 17.5em;
-            height: 3.5em;
-            margin-left: 1em;
-            border: none;
-            border-radius: 40px;
-            background-color: rgb(123, 255, 141);
-            font-size: 13px;
-            color: #1d1d1d;
-            transition: all 0.2s ease;
-            z-index: 1;
-
-            &:hover {
-              cursor: pointer;
-              background-color: rgb(109, 223, 124);
-            }
-
-            @include breakPoints(small) {
-              width: 14em;
-              margin-left: 0;
-            }
-
-            @include breakPoints(mobile) {
-              width: 15em;
-              margin-left: 0;
+              color: #ff0000;
             }
           }
 
-          #info {
-            width: 17.5em;
-            height: 3.5em;
-            margin: 0 3em 0 3em;
-            position: relative;
-            border: none;
-            border-radius: 40px;
-            background-color: rgb(60, 60, 60);
-            font-size: 13px;
-            color: rgb(244, 244, 244);
-            transition: all 0.2s ease;
+          #overviewButtons {
+            display: flex;
+            flex-direction: row;
+            column-gap: 20px;
+            row-gap: 20px;
 
-            &:hover {
-              cursor: pointer;
-              background-color: rgb(20, 20, 20);
+            @media (min-width: 300px) and (max-width: 767px) {
+              flex-direction: column;
+              align-items: start;
             }
 
-            @include breakPoints(small) {
-              width: 14em;
-              margin: 2em 0 0 0;
+            #add,
+            #info {
+              width: 228px;
+              height: 46px;
+              border: none;
+              border-radius: 40px;
+              font-size: 13px;
+              z-index: 1;
+
+              @include breakPoints(small) {
+                width: 182px;
+              }
+
+              @include breakPoints(mobile) {
+                width: 195px;
+              }
             }
 
-            @include breakPoints(mobile) {
-              width: 15em;
-              margin: 2em 0 0 0;
+            #add {
+              background-color: #7bff8d;
+              color: #1d1d1d;
+
+              &:hover {
+                cursor: pointer;
+                background-color: #6ddf7c;
+              }
+            }
+
+            #info {
+              background-color: rgb(60, 60, 60);
+              color: rgb(244, 244, 244);
+
+              &:hover {
+                cursor: pointer;
+                background-color: rgb(20, 20, 20);
+              }
             }
           }
         }
@@ -400,7 +289,7 @@
     }
   }
 
-  #bottom {
+  #bottomTwoBottom {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -591,7 +480,7 @@
         }
       }
 
-      #priceTWO {
+      #priceOne {
         margin-top: 0.5em;
         color: rgb(77, 139, 85);
         font-size: 19px;
@@ -602,7 +491,7 @@
         }
       }
 
-      #cartSMALL {
+      #cartOne {
         display: none;
         width: 11em;
         height: 4em;
@@ -795,7 +684,7 @@
         }
       }
 
-      #priceTWO {
+      #priceTwo {
         margin-top: 0.5em;
         color: rgb(77, 139, 85);
         font-size: 19px;
@@ -806,7 +695,7 @@
         }
       }
 
-      #cartSMALL {
+      #cartTwo {
         display: none;
         width: 11em;
         height: 4em;
@@ -999,7 +888,7 @@
         }
       }
 
-      #priceTWO {
+      #priceThree {
         margin-top: 0.5em;
         color: rgb(77, 139, 85);
         font-size: 19px;
@@ -1010,7 +899,7 @@
         }
       }
 
-      #cartSMALL {
+      #cartThree {
         display: none;
         width: 11em;
         height: 4em;
@@ -1203,7 +1092,7 @@
         }
       }
 
-      #priceTWO {
+      #priceFour {
         margin-top: 0.5em;
         color: rgb(77, 139, 85);
         font-size: 19px;
@@ -1214,7 +1103,7 @@
         }
       }
 
-      #cartSMALL {
+      #cartFour {
         display: none;
         width: 11em;
         height: 4em;
